# squiggle

./: .gitignore  404.html  CMakeLists.txt  CMakePresets.json  concepts.html  index.html  matrix.html  quaternion.html  readme.md  types.html  vector.html
doc/: concepts.md  coordinates.md  index.md  matrix.md  quaternion.md  types.md  vector.md
include/: sqg.h  sqg_concepts.h  sqg_coordinates.h  sqg_mat.h  sqg_mat22.h  sqg_mat33.h  sqg_mat33_vec3.h  sqg_mat44.h  sqg_mat_vec.h  sqg_mat_view.h  sqg_quat.h  sqg_quat_vec3.h  sqg_struct.h  sqg_traits.h  sqg_vec.h  sqg_vec2.h  sqg_vec3.h  sqg_vec4.h  sqg_vec_view.h
include/sqg/: sqg_quat_vec3.h
search/: search_index.json
src/: Test.cpp  sqg.h  sqg_concepts.h  sqg_mat22.h  sqg_mat33.h  sqg_mat33_vec3.h  sqg_mat44.h  sqg_struct.h  sqg_traits.h  sqg_vec.h  sqg_vec2.h  sqg_vec3.h  sqg_vec4.h
src/test/: coordinates.cpp  mat.cpp  mat33.cpp  test.h  vec2.cpp  vec3.cpp
src/test/qvm/: mat.cpp  quat.cpp  vec.cpp
